# THack_Mafia

./: .gitattributes  README.md  docker-compose.yml  test.html
.github/workflows/: workflow.yml
backend/: README.md
backend/ai_service/: Dockerfile  pyproject.toml  test.py
backend/ai_service/ImpFiles/: data.json
backend/ai_service/ai_service/: models.py  services.py
backend/ai_service/app/: main.py  meeting.py  models.py  services.py
backend/ai_service/faiss_index/: index.faiss  index.pkl
backend/audio_service/: Dockerfile  package-lock.json  package.json  pyproject.toml  server.js
backend/audio_service/app/: main.py
backend/audio_service/audio_service/: main.py
backend/auth_service/: Dockerfile  pyproject.toml
backend/auth_service/app/: main.py  models.py  services.py
backend/auth_service/auth_service/: main.py
backend/database/: Dockerfile  pyproject.toml
backend/database/database/: database.py  models.py
backend/meeting_service/: Dockerfile  pyproject.toml  test.html
backend/meeting_service/app/: main.py  models.py
backend/shared/: README.md  pyproject.toml
backend/shared/shared/: database.py  models.py
frontend/: .dockerignore  Dockerfile  README.md  node_16_alpine.tar  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AdvancedGraphLoader.jsx  AudioComponent 2.tsx  AudioComponent.tsx  ChatBoxComponent.tsx  CreateMeetingButton.tsx  DocumentUploadModal.tsx  ExportButtonComponent.jsx  HomeSidebar.tsx  MeetingListComponent.tsx  MultiScreenChartDisplay.jsx
frontend/src/config/: api.ts
frontend/src/pages/: Home.tsx  HomePage.tsx  Login.tsx  LoginPage.tsx  Meeting.tsx  MeetingPage.css  MeetingPage.tsx
frontend/src/services/: authService.ts  meetingService.ts
frontend/src/stores/: MeetingStore.ts  PageStore.ts  UserStore.ts
