[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Kasyap-R <kasyap.rachuri2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^1.4.0"
mysql-connector-python = "^9.0.0"
uvicorn = "^0.30.1"
database = {path = "../database"}
pydantic = "^2.8.2"
uuid = "^1.30"
speechrecognition = "^3.10.4"
aiofiles = "^24.1.0"
requests = "^2.32.3"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
